--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Easy to use and effortless to clean, our Body Massager is the perfect addition t
         <h1 class="order-place">Click here to place your order </h1>
 
         <button class="wa"> <a href="whatsapp://send?phone=+2348035384362">Whatsapp</a></button>
-        <button class="ig"> <a href="">Instagram</a></button>
+        <button class="ig"> <a href="https://www.instagram.com/ultra_deals01?igsh=MWc2eXl5cnZrM2Vhaw%3D%3D&utm_source=qr">Instagram</a></button>
   
       </div>
 
